package com.eventsystem.domain.company;

public enum CompanyStatus {
    ACTIVE,
    SUSPENDED,
    ADMIN_CLOSED,
    TERMINATED
}
